# NGServer

./: .gitignore  CMakeLists.txt  README.md
config/: database.sql
src/: CMakeLists.txt
src/BTree/: CMakeLists.txt
src/Database/: CMakeLists.txt  MysqlConnection.cpp  MysqlConnection.h  RedisConnection.cpp  RedisConnection.h  main.cpp  readme
src/Example/: CMakeLists.txt
src/Example/FsmUi/: CMakeLists.txt  Fsm.h  Heroine.cpp  Heroine.h  _FsmUi.cpp  libpng_test.cpp
src/Example/bt_with_ui/: Base.cpp  Base.h  CMakeLists.txt  Composite.cpp  Composite.h  Decorator.cpp  Decorator.h  Root.cpp  Root.h  Services.cpp  Services.h  Task.cpp  Task.h  _bt_with_ui.cpp
src/Example/bt_with_ui_1/: Builder.h  CMakeLists.txt  Node.h  ParentNode.cpp  ParentNode.h  Status.h  TimeData.h  _bt_with_ui_1.cpp
src/Example/bt_with_ui_1/Node/: Action.h  Inverter.h  Parallel.h  Selector.h  Sequence.h
src/FSM/: CMakeLists.txt  Heroine.cpp  Heroine.h  _FSM.cpp
src/Image/: CMakeLists.txt  README.md  _FSM.cpp  _Image.cpp
src/LuaState/: CMakeLists.txt  LoadLuaFile.cpp  LoadLuaFile.h  LuaMyLib.cpp  main.cpp  readme
src/LuaState/Lua/: lua.ini
src/LuaState/Lua/test/: constant.lua  func.lua  main.lua
src/Proto/: CMakeLists.txt  Message.pb.cc  Message.pb.h  Message.proto  MessageTest.cpp  _Proto.cpp  readme
src/Server/: CMakeLists.txt  Connector.h  CubeServer.cpp  CubeServer.h  DatabaseInstance.cpp  DatabaseInstance.h  Global.cpp  Global.h  MessagePacket.cpp  MessagePacket.h  MessageQueue.cpp  MessageQueue.h  ProtoBaseHandle.cpp  ProtoBaseHandle.h  User.h  _Server.cpp  main.bak.cpp  readme
src/Server/App/: ConnectData.h  User.cpp  User.h
src/Server/ProtoHandle/: ProtoBaseHandle.cpp  ProtoBaseHandle.h
src/Test/: CMakeLists.txt  _Test.cpp  readme
src/Test/Database/: MysqlConnectionTest.cpp
src/Test/Util/: ConvBenchmark.cpp  ConvTest.cpp  CryptBenchmark.cpp  CryptTest.cpp  TimeStampBenchmark.cpp  TimeStampTest.cpp  TimeableBenchmark.cpp  TimeableTest.cpp  UUIDBenchmark.cpp  UUIDTest.cpp
src/Util/: CMakeLists.txt  Conv.cpp  Conv.h  Crypt.h  Observable.h  Observer.h  RunTime.cpp  RunTime.h  String.cpp  String.h  StringConversion.cpp  StringConversion.h  TimeStamp.h  Timeable.cpp  Timeable.h  UUID.cpp  UUID.h
src/uvw/: CMakeLists.txt  odr.cpp
src/uvw/uvw/: thread.hpp
